# visualized-ml

./: .gitignore  pyproject.toml  readme.md
examples/: gaussian_mixture.py  gaussian_mixture_em.py  gaussian_mixture_likelihood_gradient.py  hidden_markov_model.py  k_means_clustering.py
examples/categorical_dist/: jax gaussian mixture sampling.ipynb  random sampling - numpy, jax, tfp, jax.jit.ipynb  with_jax.py  with_numpy.py
examples/gaussian_mixture/: gaussian mixture visualization.ipynb  readme.md  univariate_gmm_with_em.py  univariate_gmm_with_likelihood_gradient.py  visualize em learning.ipynb
examples/notebooks/: scatter plot matrix (splom) visualization.ipynb  using altair.ipynb
examples/univariate_gaussian_mixture/: visualize em learning.ipynb
graphical_models/: __init__.py  hidden_markov_model.py
graphical_models/gaussian_mixture/: __init__.py  gaussian_mixture.py  learn_em.py  learn_likelihood_gradient.py  model.py
graphical_models/gaussian_mixture/univariate/: __init__.py  learn_em.py  learn_likelihood_gradient.py  univariate_gaussian_mixture.py
graphical_models/non_probabilistic/: k_means_mixture.py
notebooks/: Get data from UCI, to DataFrame.ipynb  bayes net definition.ipynb  correlations, partial correlations (to do).ipynb  get data from UCI, to DataFrame.ipynb
tests/: test_graphical_models.py
visualized_ml/: hidden_markov_model.py
visualized_ml/gaussian_mixture/univariate/: learn_em.py
visualized_ml/non_probabilistic/: k_means_mixture.py
