[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.poetry]
name = "graphical-models"
version = "0.1.0"
description = ""
authors = ["William C Grisaitis <wgrisaitis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.0.3"
plotly = "^4.6.0"
seaborn = "^0.10.0"
jupyter_contrib_nbextensions = "^0.5.1"
jaxlib = "^0.1.44"
jax = "^0.1.63"
tensorflow-probability = "^0.9.0"
tensorflow = "2.2.0rc3"
sanic = "^19.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
